--- a/lhc/lhc.xcodeproj/xcshareddata/xcschemes/lhc Debug.xcscheme
+++ b/lhc/lhc.xcodeproj/xcshareddata/xcschemes/lhc Debug.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "lhc.app"
-               BlueprintName = "lhc"
-               ReferencedContainer = "container:lhc.xcodeproj">
+               BuildableName = "LHC.app"
+               BlueprintName = "LHC"
+               ReferencedContainer = "container:LHC.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "lhc.app"
-            BlueprintName = "lhc"
-            ReferencedContainer = "container:lhc.xcodeproj">
+            BuildableName = "LHC.app"
+            BlueprintName = "LHC"
+            ReferencedContainer = "container:LHC.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -52,9 +52,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "lhc.app"
-            BlueprintName = "lhc"
-            ReferencedContainer = "container:lhc.xcodeproj">
+            BuildableName = "LHC.app"
+            BlueprintName = "LHC"
+            ReferencedContainer = "container:LHC.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -70,9 +70,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "lhc.app"
-            BlueprintName = "lhc"
-            ReferencedContainer = "container:lhc.xcodeproj">
+            BuildableName = "LHC.app"
+            BlueprintName = "LHC"
+            ReferencedContainer = "container:LHC.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
