--- a/openFrameworks-Info.plist
+++ b/openFrameworks-Info.plist
@@ -6,8 +6,6 @@
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleIconFile</key>
-	<string>${ICON}</string>
 	<key>CFBundleIdentifier</key>
 	<string>cc.openFrameworks.${EXECUTABLE_NAME}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -18,11 +16,13 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>CFBundleIconFile</key>
+	<string>${ICON}</string>
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs to access the camera</string>
-	<key>NSHighResolutionCapable</key>
-	<true/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app needs to access the microphone</string>
+	<key>NSHighResolutionCapable</key>
+	<false/>
 </dict>
 </plist>
