--- a/LHC.xcodeproj/xcshareddata/xcschemes/LHC Release.xcscheme
+++ b/LHC.xcodeproj/xcshareddata/xcschemes/LHC Release.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0600"
+   LastUpgradeVersion = "1540"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "emptyExample.app"
-               BlueprintName = "emptyExample"
+               BuildableName = "LHC.app"
+               BlueprintName = "LHC"
                ReferencedContainer = "container:LHC.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -31,8 +31,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "emptyExample.app"
-            BlueprintName = "emptyExample"
+            BuildableName = "LHC.app"
+            BlueprintName = "LHC"
             ReferencedContainer = "container:LHC.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -54,8 +54,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "emptyExample.app"
-            BlueprintName = "emptyExample"
+            BuildableName = "LHC.app"
+            BlueprintName = "LHC"
             ReferencedContainer = "container:LHC.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -71,8 +71,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "emptyExample.app"
-            BlueprintName = "emptyExample"
+            BuildableName = "LHC.app"
+            BlueprintName = "LHC"
             ReferencedContainer = "container:LHC.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
